<resources>
    <string name="app_name">Food Sample</string>

    <string name="label_restaurant_list">Restaurant List</string>
    <string name="label_shopping_cart">Shopping Cart</string>
    <string name="label_order">Order</string>
    <string name="label_order_success">Order Success</string>

    <string name="btn_checkout">Checkout</string>
    <string name="btn_checkout_items">Checkout (%d) items</string>
    <string name="btn_order">Order</string>
    <string name="btn_order_now">Order now</string>
    <string name="btn_order_with_unit">Order now (%.2f $)</string>
    <string name="btn_ok">OK</string>

    <string name="title_price_unit">%.2f $</string>
    <string name="title_shopping_cart">Shopping cart</string>
    <string name="title_customer_details">Customer details</string>
    <string name="title_pickup_delivery">Pickup delivery</string>
    <string name="title_card_details">Card details</string>
    <string name="title_total_items_in_cart">Total items in cart</string>
    <string name="title_subtotal">Subtotal</string>
    <string name="title_delivery_charge">Delivery charge</string>
    <string name="title_total">Total</string>

    <string name="hint_name">Name</string>
    <string name="hint_address">Address</string>
    <string name="hint_city">City</string>
    <string name="hint_state">State</string>
    <string name="hint_zip_code">Zip code</string>
    <string name="hint_mm_yy">mm/yy</string>
    <string name="hint_card_expiry">Expiry</string>
    <string name="hint_card_number">Card number</string>
    <string name="hint_card_pin">PIN</string>

    <string name="err_empty">%s should not be empty.</string>

    <string name="msg_order_success">Order placed successfully.</string>
    <string name="check_out">Check Out</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="search_here">Search Here!</string>
    <string name="search_restaurant">Search Restaurant</string>
    <string name="login">Login</string>
    <string name="profile">Profile</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="rate_up">Rate Up</string>
    //drawer
    <string name="open">Drawer Open</string>
    <string name="close">Drawer Close</string>
    <string name="setting">Setting</string>
    <string name="log_out">Log Out</string>
    <string name="btn_reorder">Reorder</string>
    <string name="title_pending">Pending</string>
    <string name="please_enter_your_credential_login">Please Enter Your Credential Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="_959_79821758">+959 79821758</string>
    <string name="please_enter_your_register_app">Please Enter Your Register App!</string>
    <string name="mgmg_gmail_com">mgmg@gmail.com</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="register_here">Register Here?</string>
    <string name="submit">Submit</string>
    <string name="rating_result_is">Rating Result is :</string>
    <string name="call">Call</string>
    <string name="reorder">Reorder</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="edit">Edit</string>
    <string name="order_history">Order History</string>
    <string name="myanmar">Myanmar</string>

</resources>